--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Animal Database</title>
+	<title>Quote Database</title>
 	<link href='http://fonts.googleapis.com/css?family=Bree+Serif|Crimson+Text:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="local.css">
 </head>
