--- a/app/index.html
+++ b/app/index.html
@@ -1,21 +1,26 @@
 <html>
 <head>
-	<title>Quote Database</title>
+	<title>Word Database</title>
 	<link href='http://fonts.googleapis.com/css?family=Bree+Serif|Crimson+Text:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="local.css">
 </head>
 <body>
-	<h1>Welcome to the Quote Database</h1>
 
-	<h3>Submit new quotes</h3>
-	<form id="input-quote">
-		<label for="user-quote">
-			Add a Quote: <input type="text" id="user-quote">
-			<input type="submit" value="Add this quote">
-		</label>
-  </form>
+	<div id="header">
+		<h1>Welcome to the Word Database</h1>
+	</div>
 
-	<p id="quote-add-response"></p>
+	<div id="main">
+		<h3>Submit a new word</h3>
+		<form id="input-word">
+			<label for="user-word">
+				Add a Word: <input type="text" id="user-word">
+				<input type="submit" value="Add this word">
+			</label>
+	  </form>
+
+		<p id="word-add-response"></p>
+	</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="client.js"></script>
